tests/syntactic/output/output.dl
.decl A(x:number) output output
